updated background color

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 :root
 {
     /*colors*/
-    --background-color: rgb(50,70,50);
+    --background-color: rgba(50,70,50,150);
     --text-color: rgb(20,125,25);
     --border-color: rgb(20,125,10);
     
@@ -13,7 +13,7 @@
 body > main > section
 {
     /*let's give this a crt look with some scanlines and noise*/
-    background-image: var(--background-color); 
+    background-color: var(--background-color); 
     background-repeat: repeat;
     background-attachment: fixed;
     /*background-position-x: FIGURE OUT HOW TO ANIMATE THIS LATER*/
