--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
     /*colors*/
     --section-background-color: rgba(20,38,20, .72);
     --text-color: rgb(150,155,150);
-    --text-accent-color: rgb(20,150,20);
+    --text-accent-color: rgb(180,180,180);
     --border-color: rgb(20,150,20);
     --link-color: rgb(0,200,0);
     --link-visited: rgb(150,200,150);
@@ -76,6 +76,23 @@ header h1
         'article article';
 
         grid-template-columns: 50% 50%;
+    }
+}
+
+@media screen and (max-width: 35em)
+{
+    body > main
+    {
+        grid-template:
+        'cwork'
+        'pic'
+        'fact'
+        'question'
+        'slang'
+        'article';
+
+        grid-template-columns: auto;
+
     }
 }
 
@@ -170,4 +187,26 @@ a:visited
 {
     background-color: var(--button-link-bg-hover);
     border-color: var(--button-link-bg-hover);
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6
+{
+    color: var(--text-accent-color);
+    font: monospace;
+}
+
+main > section h1,
+main > section h2,
+main > section h3,
+main > section h4,
+main > section h5,
+main > section h6
+{
+    color: var(--text-accent-color);
+    font: monospace;
 }
